--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/_Imports.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/_Imports.razor
@@ -6,6 +6,6 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using NewTenantApp
-@using NewTenantApp.Client
-@using NewTenantApp.Components
+@using BlazorAppEFTenant
+@using BlazorAppEFTenant.Client
+@using BlazorAppEFTenant.Components
