--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/DetalleUsuario.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/DetalleUsuario.razor
@@ -5,77 +5,80 @@
 @using DataBase.Modelo
 @using DataBase.Servicios
 @inject IUnitOfWorkFactory UnitOfWorkFactory 
-@inject IContextKeyProvider Context
-@inject ITenantProvider Tenant
+@inject IContextKeyProvider ContextKeyProvider
+@inject ITenantProvider TenantProvider
 @inject NavigationManager nav
 
 
 <h3>DetalleUsuario</h3>
 
 <div class="container">
-    <EditForm Model="@NewUser" OnValidSubmit="@HandleValidSubmit" OnInvalidSubmit="@HandleInvalidSubmit" FormName="DetalleUsuarioForm">
-        <DataAnnotationsValidator />
-        <div class="row">
-            <div class="col-md-8">
-                <div class="row" style="margin-top:10px">
-                    <div class="col-md-12">
-                        <label for="Codigo">Codigo #</label>
-                        <input type="text" class="form-control" id="Codigo" @bind-value="NewUser.Codigo" placeholder="enter codigo ..." />
-                        <ValidationMessage For="@(() => NewUser.Codigo)" />
+    @if (NewUser != null)
+    {
+        <EditForm Model="@NewUser" OnValidSubmit="@HandleValidSubmit" OnInvalidSubmit="@HandleInvalidSubmit" FormName="DetalleUsuarioForm">
+            <DataAnnotationsValidator />
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="row" style="margin-top:10px">
+                        <div class="col-md-12">
+                            <label for="Codigo">Codigo #</label>
+                            <input type="text" class="form-control" id="Codigo" @bind-value="NewUser.Codigo" placeholder="enter codigo ..." />
+                            <ValidationMessage For="@(() => NewUser.Codigo)" />
+                        </div>
                     </div>
-                </div>
 
-                <div class="row" style="margin-top:10px">
-                    <div class="col-md-12">
-                        <label for="UserName">UsertName #</label>
-                        <input type="text" class="form-control" id="UserName" @bind-value="NewUser.UserName" placeholder="enter UserName ..." />
-                        <ValidationMessage For="@(() => NewUser.UserName)" />
+                    <div class="row" style="margin-top:10px">
+                        <div class="col-md-12">
+                            <label for="UserName">UsertName #</label>
+                            <input type="text" class="form-control" id="UserName" @bind-value="NewUser.UserName" placeholder="enter UserName ..." />
+                            <ValidationMessage For="@(() => NewUser.UserName)" />
+                        </div>
                     </div>
-                </div>
 
-                <div class="row" style="margin-top:10px">
-                    <div class="col-md-12">
-                        <label for="NivelAcceso">NivelAcceso #</label>
-                        <input type="text" class="form-control" id="NivelAcceso" @bind-value="NewUser.NivelAcceso" placeholder="enter NivelAcceso ..." />
-                        <ValidationMessage For="@(() => NewUser.NivelAcceso)" />
+                    <div class="row" style="margin-top:10px">
+                        <div class="col-md-12">
+                            <label for="NivelAcceso">NivelAcceso #</label>
+                            <input type="text" class="form-control" id="NivelAcceso" @bind-value="NewUser.NivelAcceso" placeholder="enter NivelAcceso ..." />
+                            <ValidationMessage For="@(() => NewUser.NivelAcceso)" />
+                        </div>
                     </div>
-                </div>
 
-                <div class="row" style="margin-top:10px">
-                    <div class="col-md-12">
-                        <label for="Password">Password #</label>
-                        <input type="text" class="form-control" id="Password" @bind-value="NewUser.Password" placeholder="enter Password ..." />
-                        <ValidationMessage For="@(() => NewUser.Password)" />
+                    <div class="row" style="margin-top:10px">
+                        <div class="col-md-12">
+                            <label for="Password">Password #</label>
+                            <input type="text" class="form-control" id="Password" @bind-value="NewUser.Password" placeholder="enter Password ..." />
+                            <ValidationMessage For="@(() => NewUser.Password)" />
+                        </div>
                     </div>
-                </div>
 
-                <div class="row" style="margin-top:10px">
-                    <div class="col-md-12">
-                        <label for="email">email #</label>
-                        <input type="text" class="form-control" id="email" @bind-value="NewUser.email" placeholder="enter email ..." />
-                        <ValidationMessage For="@(() => NewUser.email)" />
+                    <div class="row" style="margin-top:10px">
+                        <div class="col-md-12">
+                            <label for="email">email #</label>
+                            <input type="text" class="form-control" id="email" @bind-value="NewUser.email" placeholder="enter email ..." />
+                            <ValidationMessage For="@(() => NewUser.email)" />
+                        </div>
                     </div>
-                </div>
-                <div class="row" style="margin-top:10px">
-                    <div class="col-md-12">
-                        <label for="email">Tenant #</label>
-                        <input type="text" class="form-control" id="tenant" @bind-value="NewUser.TenantId" placeholder="enter tenant ..." />
-                        <ValidationMessage For="@(() => NewUser.TenantId)" />
+                    <div class="row" style="margin-top:10px">
+                        <div class="col-md-12">
+                            <label for="email">Tenant #</label>
+                            <input type="text" class="form-control" id="tenant" @bind-value="NewUser.TenantId" placeholder="enter tenant ..." />
+                            <ValidationMessage For="@(() => NewUser.TenantId)" />
+                        </div>
                     </div>
-                </div>
 
-                <button type="submit" class="btn btn-info" style="margin-top:10px">Save</button>
-                <button type="button" class="btn btn-secondary" @onclick="Cancel" style="margin-top:10px">Cancel</button>
+                    <button type="submit" class="btn btn-info" style="margin-top:10px">Save</button>
+                    <button type="button" class="btn btn-secondary" @onclick="Cancel" style="margin-top:10px">Cancel</button>
+                </div>
+                @if (displayValidationErrorMessages)
+                {
+                    <div class="col-md-4" style="margin-top:10px">
+                        <label>Validation Messages: </label>
+                        <ValidationSummary />
+                    </div>
+                }
             </div>
-            @if (displayValidationErrorMessages)
-            {
-                <div class="col-md-4" style="margin-top:10px">
-                    <label>Validation Messages: </label>
-                    <ValidationSummary />
-                </div>
-            }
-        </div>
     </EditForm>
+    }
 
 </div>
 
@@ -87,18 +90,41 @@
 
     private Usuario NewUser = new Usuario();
     int TenantId;
-    string Contexto = "SqlServer";
 
-
+    private Func<Task>? _onTenantChangedHandler;
+    private Func<Task>? _onContextKeyChangedHandler;
 
     bool displayValidationErrorMessages = false;
     bool displayUserAddedToDB = false;
+
+
+    protected override async Task OnInitializedAsync()
+    {
+
+        TenantId = TenantProvider.CurrentTenantId ?? 0;
+        _onTenantChangedHandler += async () =>
+       {
+           await CargarAsync();
+           StateHasChanged();
+       };
+
+        _onContextKeyChangedHandler += async () =>
+        {
+            await CargarAsync();
+            StateHasChanged();
+        };
+
+        TenantProvider.OnTenantChanged += _onTenantChangedHandler;
+        ContextKeyProvider.OnContextKeyChanged += _onTenantChangedHandler;
+        await CargarAsync();
+    }
+
 
     private async Task HandleValidSubmit(EditContext context)
     {
         displayValidationErrorMessages = false;
         displayUserAddedToDB = true;
-        var servicioUsuario = new ServicioUsuarios(Context, UnitOfWorkFactory, Tenant);
+        var servicioUsuario = new ServicioUsuarios(ContextKeyProvider, UnitOfWorkFactory, TenantProvider);
         if (Id != 0)
             servicioUsuario.UpdateAsync(NewUser);
         else
@@ -116,17 +142,7 @@
     }
 
 
-    protected override async Task OnInitializedAsync()
-    {
 
-        TenantId = Tenant.CurrentTenantId ?? 0;
-        Tenant.OnTenantChanged +=  () =>
-       {
-           NewUser.TenantId = Tenant.CurrentTenantId ?? TenantId;
-           StateHasChanged();
-       };
-        await CargarAsync();
-    }
 
     private async Task CargarAsync()
     {
@@ -134,7 +150,7 @@
         {
             if (Id != 0)
             {
-                var servicioUsuario = new ServicioUsuarios(Context, UnitOfWorkFactory, Tenant);
+                var servicioUsuario = new ServicioUsuarios(ContextKeyProvider, UnitOfWorkFactory, TenantProvider);
                 NewUser = await servicioUsuario.GetByIdAsync(Id);
             }
             else 
@@ -162,11 +178,9 @@
 
     private void Dispose()
     {
-        Tenant.OnTenantChanged -= async () =>
-       {
-            await CargarAsync();
-           StateHasChanged();
-       };
+        TenantProvider.OnTenantChanged -= _onTenantChangedHandler;
+        ContextKeyProvider.OnContextKeyChanged -= _onContextKeyChangedHandler;
+
     }
 }
 
