--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Layout/NavMenu.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Layout/NavMenu.razor
@@ -59,6 +59,16 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ListaUsuariosMultipleContext">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista MultipleContext
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ListaUsuariosMultipleTenant">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista MultipleTenant
+            </NavLink>
+        </div>
     </nav>
 </div>
 @code{
