--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/DetalleUsuario.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/DetalleUsuario.razor
@@ -11,6 +11,8 @@
 
 
 <h3>DetalleUsuario</h3>
+<p>Usuarios del tenant <strong>@TenantProvider.CurrentTenantId</strong>:</p>
+<p>Usuarios del tenant <strong>@ContextKeyProvider.CurrentContextKey</strong>:</p>
 
 <div class="container">
     @if (NewUser != null)
