--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuariosMultipleContext.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuariosMultipleContext.razor
@@ -1,4 +1,4 @@
-﻿@page "/ListaUsuarios"
+﻿@page "/ListaUsuariosMultipleContext"
 @rendermode InteractiveServer
 @using DataBase.Genericos
 @using DataBase.Modelo
@@ -19,7 +19,6 @@
 }
 else
 {
-
     <p>Usuarios del tenant <strong>@TenantProvider.CurrentTenantId</strong>:</p>
     <p>Usuarios del tenant <strong>@ContextKeyProvider.CurrentContextKey</strong>:</p>
 
@@ -67,7 +66,7 @@ else
 
 
 @code {
-    public List<Usuario>? usuarios { get; set; } = null;
+    public List<Usuario>? usuarios { get; set; } = new List<Usuario>();
     int TenantId;
     string ContextoKey ="";
 
@@ -77,21 +76,17 @@ else
     protected override async Task OnInitializedAsync()
     {
 
-
+        TenantId = TenantProvider.CurrentTenantId ?? 0;
         _onTenantChangedHandler += async () =>
        {
+           usuarios.Clear();
            await CargarAsync();
            StateHasChanged();
        };
 
-        _onContextKeyChangedHandler += async () =>
-        {
-            await CargarAsync();
-            StateHasChanged();
-        };
 
         TenantProvider.OnTenantChanged +=  _onTenantChangedHandler;
-        ContextKeyProvider.OnContextKeyChanged += _onTenantChangedHandler;
+
         await CargarAsync();
     }
 
@@ -99,12 +94,14 @@ else
     {
         try
         {
+            foreach (var contextKey in ContextKeyProvider.GetContexts())
+            {
 
-            var user = new ServicioUsuarios(ContextKeyProvider, UnitOfWorkFactory, TenantProvider);
-            var list = await user.GetAllAsync();
-            usuarios = list.ToList();
-            TenantId = TenantProvider.CurrentTenantId ?? 0;
-            ContextoKey = ContextKeyProvider.CurrentContextKey ?? "SqlServer";
+                var user = new ServicioUsuarios(contextKey, UnitOfWorkFactory, TenantProvider);
+                var list = await user.GetAllAsync();
+                usuarios.AddRange(list);
+                TenantId = TenantProvider.CurrentTenantId ?? 0;
+            }
 
         }
         catch (Exception ex)
@@ -120,7 +117,7 @@ else
     private void Dispose()
     {
         TenantProvider.OnTenantChanged -= _onTenantChangedHandler;
-        ContextKeyProvider.OnContextKeyChanged -= _onContextKeyChangedHandler;
+
 
     }
 }
